# altertable-flightsql-python

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
examples/: client_usage.py
proto/: arrow_flight_sql.proto
scripts/: compile_protos.py
src/altertable_flightsql/: __init__.py  client.py  py.typed
tests/: __init__.py  conftest.py  test_execute.py  test_ingest.py  test_metadata.py  test_queries.py  test_transactions.py
