[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altertable-flightsql"
version = "0.1.0"
description = "Python client library for Altertable"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["altertable", "sql", "database", "analytics", "arrow", "flight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "protobuf>=5.26.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.73.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "ruff>=0.0.270",
    "testcontainers>=4.0.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/altertable-flightsql"
Documentation = "https://github.com/yourusername/altertable-flightsql#readme"
Repository = "https://github.com/yourusername/altertable-flightsql"
"Bug Tracker" = "https://github.com/yourusername/altertable-flightsql/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["altertable_flightsql*"]

[tool.setuptools.package-data]
altertable_flightsql = ["*.pyi", "py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = "src/altertable_flightsql/generated"

[tool.isort]
profile = "black"
line_length = 100
skip = ["src/altertable_flightsql/generated"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "src/altertable_flightsql/generated",
]

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B017",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

